Additional preprocessing: PrintClassHistogram, context, ParallelSerialOld.